dev_ops/deployment/EKS-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aap-api
  labels:
    app: aap-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aap-api
  template:
    metadata:
      labels:
        app: aap-api
    spec:
      containers:
      - name: aap-api
        image: 050752608385.dkr.ecr.ap-south-1.amazonaws.com/piramal/tech4gov:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: aap-api-service
spec:
  selector:
    app: aap-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
