dev_ops/deployment/dep.yaml
# Deployment Definition
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment
  namespace: default
  labels:
    app: springboot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
      - name: springboot
        image: 050752608385.dkr.ecr.ap-south-1.amazonaws.com/piramal/tech4gov:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
# Service Definition
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: default
  labels:
    app: springboot
spec:
  type: LoadBalancer
  selector:
    app: springboot
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
    nodePort: 32055  # Specify a NodePort within the allowed range (e.g., 30000-32767)
