dev_ops/deployment/spring.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  # Use "nlb" for Network Load Balancer, "elb" for Classic Load Balancer
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:ap-south-1:050752608385:certificate/c713bd3c-9613-461f-8e0b-fe846e2e7cb2"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "HTTP"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
spec:
  type: LoadBalancer
  selector:
    app: springboot
  ports:
    - name: https
      port: 443  # Expose HTTPS externally
      targetPort: 8080  # Forward traffic to Spring Boot on port 8080
      protocol: TCP
