dev_ops/deployment/ssl.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: default
  labels:
    app: springboot
spec:
  type: LoadBalancer
  selector:
    app: springboot
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8080
    protocol: TCP
