dev_ops/deployment/uiservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-south-1:050752608385:certificate/1620c244-fce4-4e20-9181-96fe754c6bc9
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "HTTP"
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  labels:
    app: ui-app
spec:
  type: LoadBalancer  # Change from ClusterIP to LoadBalancer
  selector:
    app: ui-app
  ports:
    - name: https
      port: 443  # Expose HTTPS
      targetPort: 3000  # Your UI app listens on port 3000
      protocol: TCP
