dev_ops/deployment/ing3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /    
spec:
  ingressClassName: nginx  # Ensure this matches your Nginx ingress class
  rules:
  - host: aws.shsbihar.in  # Update with your actual domain
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: springboot-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-service
            port:
              number: 80
